# retrocart

./: .env.example  .gitignore  README.md  docker-compose.yml  package.json  pnpm-lock.yaml
apps/api/: codegen.ts  package.json
apps/api/src/: context.ts  index.ts
apps/mobile/: app.json  package.json
apps/mobile/app/: _layout.tsx
apps/prototype/: index.html  package.json  tailwind.config.cjs  tailwind.config.ts  vite.config.ts
apps/prototype/src/: App.tsx  index.css
db/sql/: V1__extensions.sql  V2__master_catalog.sql  V3__user_domain.sql  V4__dev_seed.sql
docs/: ARCHITECTURE.md  LIBRARY_SYNC_PLAN.md  OPEN_QUESTIONS.md
resources/gamelists/arcade/: gamelist.xml
resources/gamelists/atari2600/: gamelist.xml
resources/gamelists/dos/: gamelist.xml
resources/gamelists/dreamcast/: gamelist.xml
resources/gamelists/gamegear/: gamelist.xml
resources/gamelists/gb/: gamelist.xml
resources/gamelists/gba/: gamelist.xml
resources/gamelists/gbc/: gamelist.xml
resources/gamelists/gc/: gamelist.xml
resources/gamelists/genesis/: gamelist.xml
resources/gamelists/mastersystem/: gamelist.xml
resources/gamelists/n64/: gamelist.xml
services/etl/: README.md  pyproject.toml
services/etl/src/retrocart_etl/: __init__.py  __main__.py
services/etl/src/retrocart_etl.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
services/generator/: README.md  pyproject.toml
services/generator/src/retrocart_generator/: __init__.py  main.py
services/generator/src/retrocart_generator.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
(+44 files in other folders)
